--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ input[type=submit]:hover{
 
 
 
-@media screen and (max-width: 699px) {
+@media screen and (max-width: 600px) {
     .col-1, .col-2, input[type=submit] {
       width: 100%;
       margin-top: 0;
@@ -316,9 +316,9 @@ input[type=submit]:hover{
         flex-flow: column wrap;
     }
     #banner {
-        height: 200px;
+        height: auto;
         width: 100%;
-        margin: auto;
+        margin: 0;
     }
     h1 {
         font-size: 3em;
