--- a/css/style.css
+++ b/css/style.css
@@ -316,9 +316,8 @@ input[type=submit]:hover{
         flex-flow: column wrap;
     }
     #banner {
-        height: auto;
         width: 100%;
-        margin: 0;
+        margin: auto;
     }
     h1 {
         font-size: 3em;
