--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ input[type=submit]:hover{
     h1 {
         font-size: 3em;
         width: 100%;
-        margin: auto;
+        margin: 0;
         padding: 15px;
     } 
     #presentation {
