--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,7 @@ input[type=submit]:hover{
         height: 100%;
         display: block;
         flex-flow: column wrap;
+	margin: 0;
     }
     #banner {
         width: 100%;
