--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ img {
     letter-spacing: 0.1em;
     line-height: 2em;
     background: #ffd56b;
-    padding: 30px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
@@ -332,8 +331,9 @@ input[type=submit]:hover{
         justify-content: center;
         display: block;
         background-size: contain;
-        margin-top: 3em;
-
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
     }
     #cards {
         display: flex;
